--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://ub.caohongchuan.com:3306/SDUrunner?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = yingzheng
-spring.datasource.password = 123412chc
+#redis
 
-server.port=8443
+#mysql
+
+server.port=8080
 
 server.servlet.session.timeout=604800
 server.servlet.session.cookie.max-age=604800
